--- a/RN16FoodDeliveryApp/package.json
+++ b/RN16FoodDeliveryApp/package.json
@@ -19,7 +19,10 @@
     "react-native-gesture-handler": "^2.0.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.0"
+    "react-native-screens": "^3.10.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
